create/duplicate/edit functionality for skills

--- a/website/templates/create-skill.html
+++ b/website/templates/create-skill.html
@@ -7,9 +7,13 @@
 {% block body %}
 <div class="flex">
     <div class="flex vertical start" x-data="main">
-        <h1>Create a Skill</h1>
+        {% if skill %}
+            <h1>Edit {{ skill.name }}</h1>
+        {% else %}
+            <h1>Create a Skill</h1>
+        {% endif %}
         <form class="interior flex vertical start" method="post">
-            <input type="text" name="name" id="name" placeholder="Skill Name" x-model="name">
+            <input type="text" name="name" id="name" placeholder="Skill Name" x-model="name" {% if skill %} x-init="name=`{{ skill.name }}`" {% endif %}>
             {% if not cruleset.ability_scores %}
                 <div class="mild danger">
                     <h3>Hey!</h3>
@@ -18,14 +22,19 @@
                 <div style="height: 30px"></div>
             {% endif %}
             <label for="ability">Ability:</label>
-            <select name="ability" id="ability" x-model="ability">
+            <select name="ability" id="ability" x-model="ability" {% if skill %} x-init="ability=`{{ skill.ability_score }}`" {% endif %} >
                 <option value="N/A">N/A</option>
                 {% for score in cruleset.ability_scores %}
                     <option value="{{ score.abbr }}">{{ score.name }}</option>
                 {% endfor %}
             </select>
-            <textarea name="text" id="text" placeholder="Skill Description" x-model="text"></textarea>
-            <a><button type="submit">Create Skill!</button></a>
+            <textarea placeholder="Skill Description" x-model="text"></textarea>
+            <input type="hidden" name="text" id="text" x-model="text" {% if skill %} x-init="text=`{{ skill.description }}`" {% endif %}>
+            {% if skill %}
+                <a><button type="submit">Submit Changes</button></a>
+            {% else %}
+                <a><button type="submit">Create Skill!</button></a>
+            {% endif %}
         </form>
         <h1 x-text="name"></h1>
         <p x-html="'<strong>Ability Score: </strong>' + abilitydict[ability]"></p>
