--- a/website/templates/create-tag.html
+++ b/website/templates/create-tag.html
@@ -7,11 +7,19 @@
 {% block body %}
 <div class="flex">
 	<div class="flex vertical start" x-data="main">
-		<h1>Create Item Type</h1>
+		{% if tag %}
+			<h1>Edit {{ tag.name }}</h1>
+		{% else %}
+			<h1>Create Item Type</h1>
+		{% endif %}
 		<form class="interior flex vertical start" method="post">
-			<input name="name" id="name" x-model="name" placeholder="Item Type Name">
-			<textarea name="text" id="text" x-model="text" placeholder="Item Type Description Description"></textarea>
-			<a><button type="submit">Create item Type!</button></a>
+			<input name="name" id="name" x-model="name" placeholder="Item Type Name" {% if tag %} x-init="name=`{{ tag.name }}`" {% endif %}>
+			<textarea name="text" id="text" x-model="text" placeholder="Item Type Description Description" {% if tag %} x-init="name=`{{ tag.name }}`" {% endif %}></textarea>
+			{% if tag %}
+				<a><button type="submit">Submit Changes</button></a>
+			{% else %}
+				<a><button type="submit">Create Item Type!</button></a>
+			{% endif %}
 		</form>
 		<h2 x-text="name"></h2>
 		<hr>
