--- a/website/templates/properties.html
+++ b/website/templates/properties.html
@@ -11,6 +11,13 @@
 		{% for property in properties %}
 		<div class="usercontent">
 			<h2>{{ property.name }}</h2>
+			{% if cruleset.userid == current_user.id %}
+				<div>
+					<a href="/Reference/Items/Properties/Edit/{{ property.name.replace(' ', '-') }}"><button style="width: auto">Edit {{ property.name }}</button></a>
+					<a href="/Reference/Items/Properties/Duplicate/{{ property.name.replace(' ', '-') }}"><button style="width: auto">Duplicate {{ property.name }}</button></a>
+					<a href="/Reference/Items/Properties/Delete/{{ property.name.replace(' ', '-') }}"><button class="mild danger" style="width: auto">Delete {{ property.name }}</button></a>
+				</div>
+			{% endif %}
 			<hr>
 			<div x-html="convert(`{{ property.text }}`)"></div>
 		</div>
