--- a/website/templates/languages.html
+++ b/website/templates/languages.html
@@ -11,6 +11,13 @@
 		{% for language in cruleset.languages %}
 		<div class="usercontent">
 			<h2 x-text="`{{ language.name }}`"></h2>
+			{% if cruleset.userid == current_user.id %}
+				<div>
+					<a href="/Reference/Languages/Edit/{{ language.name.replace(' ', '-') }}"><button style="width: auto">Edit {{ language.name }}</button></a>
+					<a href="/Reference/Languages/Duplicate/{{ language.name.replace(' ', '-') }}"><button style="width: auto">Duplicate {{ language.name }}</button></a>
+					<a href="/Reference/Languages/Delete/{{ language.name.replace(' ', '-') }}"><button class="mild danger" style="width: auto">Delete {{ language.name }}</button></a>
+				</div>
+			{% endif %}
 			<hr>
 			<div x-html="convert(`{{ language.text }}`)"></div>
 		</div>
