--- a/website/templates/item.html
+++ b/website/templates/item.html
@@ -45,7 +45,7 @@
 		<div class="interior flex horizontal center">
 			<a href="/Reference/Items/Edit/{{ item.name.replace(' ', '-') }}"><button>Edit {{ item.name }}</button></a>
 			<a href="/Reference/Items/Duplicate/{{ item.name.replace(' ', '-') }}"><button>Duplicate {{ item.name }}</button></a>
-			<a href="/Reference/Item/Delete/{{ item.name.replace(' ', '-') }}"><button class="mild danger">Delete {{ item.name }}</button></a>
+			<a href="/Reference/Items/Delete/{{ item.name.replace(' ', '-') }}"><button class="mild danger">Delete {{ item.name }}</button></a>
 		</div>
 		{% endif %}
 	</div>
